# MedDIFT-extension

./: .gitignore  CustomDiffusionModelUNetMaisi.py  LICENSE  README.md  cli.py  config_ddpm_lung  datasets.py  evaluate.py  features.py  featurizer.py  helper.py  initial_eval.py  main.py  matching.py  preprocess.py  pyproject.toml  run_for_all.py  spacings.py
datasets/: preprocess_lungct_dir_qa.py
