[project]
name = "meddift-extension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops",
    "huggingface-hub>=1.4.1",
    "matplotlib>=3.10.8",
    "monai",
    "nibabel>=5.3.3",
    "scikit-image>=0.26.0",
    "simpleitk>=2.5.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "unigradicon>=1.0.4",
]
